bpo-35634: Raise an error when first passed kwargs contains duplicated keys. (GH-11438)